2004-10-08  Jeff Johnston  <jjohnstn@redhat.com>
                                                                                
        * libc/include/sys/signal.h: If <signal.h> didn't include
        this header file, include <signal.h> to account for
        applications that take advantage that the two header
        files are the same in glibc.
                                                                                
2004-10-05  Tomer Levi  <Tomer.Levi@nsc.com>

        * configure.host: Add support for crx.
        * libc/include/machine/ieeefp.h: Ditto.
        * libc/include/machine/setjmp.h: Ditto.
        * libc/machine/crx/Makefile.am: New file.
        * libc/machine/crx/configure.in: Ditto.
        * libc/machine/crx/setjmp.S: Ditto.
        * libc/machine/crx/getenv.c: Ditto.
        * libc/machine/crx/aclocal.m4: Generate.
        * libc/machine/crx/configure: Ditto.
        * libc/machine/crx/Makefile.in: Ditto.
        * libc/machine/crx/sys/asm.h: New file.
        * libc/machine/crx/sys/libh.h: Ditto.
        * libc/machine/crx/sys/syscall.h: Ditto.

2004-10-05  Jeff Johnston  <jjohnstn@redhat.com>

	* Makefile.am (stmp-targ-include): Support sys header files
	from machine directories.
	* Makefile.in: Regenerated.

2004-10-04  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/vfscanf.c (__svfscanf_r): For int conversions,
	count skipped zero characters as part of the nread count for %n.
	* libc/machine/powerpc/vfscanf.c: Ditto.

2004-09-24  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/local.h: Include <stdlib.h>.

2004-09-24  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdio/fread.c (fread): Include <malloc.h>.

2004-09-22  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/fread.c (fread):  For non-space-optimized case,
	add special code for unbuffered files to use user buffer and
	only require one low-level system read.

2004-09-21  Ian Lance Taylor  <ian@wasabisystems.com>
