@@ -9,6 +9,10 @@ _BEGIN_STD_C
 #define _JBLEN 23
 #endif
 
+#if defined(__AVR__)
+#define _JBLEN 24
+#endif
+
 #ifdef __sparc__
 /*
  * onsstack,sigmask,sp,pc,npc,psr,g1,o0,wbcnt (sigcontext).
